# instagrader

./: .gitattributes  .gitignore  instagrader.code-workspace
backend/: CLAUDE.md  db.sqlite3  pyproject.toml  pyrightconfig.json
backend/accounts/: authentication.py  serializers.py  tests.py  types.py  urls.py  views.py
backend/assignments/: serializers.py  tests.py  urls.py  views.py
backend/assignments/migrations/: 0001_initial.py  0002_rename_student_name_to_file_name.py
backend/grading/migrations/: 0001_initial.py
backend/instagrader/: asgi.py  settings.py  urls.py  wsgi.py
backend/rubrics/: models.py  serializers.py  tests.py  urls.py  views.py
backend/tests/: helpers.py
dataset/: .gitignore  params.csv  pyproject.toml
frontend/: package-lock.json  package.json
model-poc/: essay.txt  main.py  prompt.json  pyproject.toml  rubric.json
project/: AGENTS.md  GEMINI.md  manage.py  pyproject.toml
project/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py
project/assignments/: models.py  serializers.py  tasks.py  urls.py  views.py
project/assignments/migrations/: 0001_initial.py  0003_alter_essay_status_add_failed.py
project/grading/: models.py  serializers.py  tests.py  urls.py  views.py
project/grading/migrations/: 0001_initial.py
project/instagrader/: __init__.py  asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
project/rubrics/: apps.py  models.py  serializers.py  urls.py  views.py
project/rubrics/migrations/: 0001_initial.py
proposal/: main.typ  refs.bib
(+36 files in other folders)
